2010-01-21  John W. Eaton  <jwe@octave.org>

	* CMatrix.cc, fCMatrix.cc, cmd-edit.cc, cmd-hist.cc,
	file-ops.cc, file-ops.h, file-stat.cc, file-stat.h, filemode.c,
	kpse.cc, lo-cutils.c, lo-sysdep.cc, lo-utils.cc, oct-env.cc,
	oct-group.cc, oct-group.h, oct-passwd.cc, oct-passwd.h,
	oct-time.cc, oct-syscalls.cc, oct-syscalls.h, statdefs.h,
	sysdir.h, syswait.h, tempname.c, regex-match.h:
	Assume sys/types.h and unistd.h are present (gnulib provides them).

2010-01-21  John W. Eaton  <jwe@octave.org>

	* file-ops.h, file-ops.cc, lo-utils.h, lo-cutils.c: Untabify.

	* file-ops.cc: Don't include unistd.h.
	(NOT_SUPPORTED): Delete unused macro.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* lo-cutils.c (octave_tempnam): New funtion.
	* lo-utils.h: Provide decl.
	* file-ops.cc (file_ops::tempnam): Call octave_tempnam.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* lo-cutils.c (octave_readlink): New funtion.
	* lo-utils.h: Provide decl.
	* file-ops.cc (file_ops::readlink): Call octave_readlink.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* lo-cutils.c (octave_symlink): New funtion.
	* lo-utils.h: Provide decl.
	* file-ops.cc (file_ops::symlink): Call octave_symlink.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* lo-cutils.c (octave_link): New funtion.
	* lo-utils.h: Provide decl.
	* file-ops.cc (file_ops::link): Call octave_link.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* lo-cutils.c (octave_unlink): New funtion.
	* lo-utils.h: Provide decl.
	* file-ops.cc (file_ops::unlink): Call octave_unlink.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* lo-cutils.c (octave_umask): New funtion.
	* lo-utils.h: Provide decl.
	* file-ops.cc (file_ops::umask): Call octave_umask.

2010-01-21  John W. Eaton  <jwe@octave.org>

	* file-ops.h (file_ops::mkdir): Move definitions to file-ops.cc.
	(file_ops::mkfifo): Move definitions to file-ops.cc.
	(file_ops::mkdir_internal, file_ops::mkfifo_internal): Delete decls.
	* file-ops.cc (file_ops::mkdir): Call octave_mkdir.